--- a/index.html
+++ b/index.html
@@ -1246,7 +1246,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-column">
-                    <h3>Folder Manager -  </h3>
+                    <h3>Folder Manager</h3>
                     <p>Профессиональное программное обеспечение для управления папками и организации данных!</p>
                 </div>
                 
