--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@
         <div class="hero-bg"></div>
         <div class="container">
             <h1>Folder Manager</h1>
-            <p>Профессиональное программное обеспечение для управления папками и организации данных в проектах компьютерного зрения</p>
+            <p>Программное обеспечение для управления папками и организации данных в проектах</p>
             <div class="cta-buttons">
                 <a href="#documentation" class="btn btn-primary">
                     <i class="fas fa-book"></i> Читать документацию
